fixed footer overlapping content

--- a/app/assets/stylesheets/belongings/_show.scss
+++ b/app/assets/stylesheets/belongings/_show.scss
@@ -1,15 +1,3 @@
-.carousel-left {
-    padding-left: 30px;
-    background-image:
-    linear-gradient(to right, rgba(84, 101, 255, 0.8), rgba(84, 101, 255, 0.8)),
-    image-url('belonging_2.jpg');
-    color: $off-white;
-}
-
-.carousel-right {
-    padding-left: 0;
-}
-
 .fa-arrow-left {
     padding-left: 30px;
     font-size: 30px;
