--- a/app/assets/stylesheets/components/_application.scss
+++ b/app/assets/stylesheets/components/_application.scss
@@ -4,10 +4,9 @@
 
 body { 
     padding: 70px 0px 0px 0px;
-    min-height: 400px;
-    margin-bottom: 100px;
+    height: 100vh;
+    margin-bottom: 0;
 }
-
 
 html {
     position: relative;
