--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,10 +5,10 @@
     width: 100%;
     align-items: center;
     justify-content: space-between;
-    height: 170px;
+    height: 180px;
     padding: 0px 30px;
     color: rgba(0,0,0,0.3);
-    position: absolute;
+    position: relative;
     left: 0;
     bottom: 0;
     overflow: hidden;
